# hk-us-quant-platform

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_IMPLEMENTATION.md  README_PROJECT.md  README_RUST.md  README_实现状态.md  ROADMAP.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  requirements.txt  start-dev.sh  start.sh  stop-dev.sh  stop.sh
.github/ISSUE_TEMPLATE/: 01-stability-story.md  02-security-config-story.md  03-trading-core-story.md  04-ci-observability-story.md
.github/workflows/: ci.yml
.kiro/steering/: product.md
config/: nginx.conf  nginx.prod.conf  prometheus.yml  redis.conf
data/: market_symbols.hk.json  market_symbols.us.json  schema.sql
docs/: BACKUP_RESTORE.md  DEPLOYMENT_SOP.md  SPRINT_2W_BACKLOG.md
docs/plans/: 2026-03-17-project-roadmap.md  2026-03-17-sprint-a-backlog.md  2026-03-17-sprint-a-task-checklist.md  2026-03-19-project-gap-prd.md  2026-03-20-product-prd.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.mjs
frontend/tests/: backtest-efficiency.test.ts  backtest-page-helpers.test.ts  backtest-report.test.ts  market-movers-coverage.test.ts  market-page-helpers.test.ts  portfolio-backtest-helpers.test.ts  (+6 more)
migrations/: 001_initial_schema.sql  002_seed_data.sql  003_data_archival.sql  004_backtest_runs.sql  005_backtest_run_details.sql  006_order_simulation_fields.sql  007_audit_log.sql  008_strategy_display_name.sql  009_backtest_experiment_metadata.sql  010_market_symbols.sql  010_signal_reviews.sql  012_portfolio_backtests.sql  013_portfolio_backtests_patch.sql
scripts/: build_market_movers.py  deploy.sh  generate_app_summary_pdf.py  import_market_symbols.py  market_data.py  test_build_market_movers.py
src/: config.rs  error.rs  events.py  events.rs  lib.rs  main.rs  types.rs  websocket.rs
tests/: api_test.rs  integration_test.rs  property_tests.proptest-regressions  property_tests.rs
(+85 files in other folders)
