[package]
name = "hk-us-quant-platform"
version = "0.1.0"
edition = "2021"
authors = ["HK-US Quant Team"]
description = "High-performance quantitative trading platform for Hong Kong and US markets"

[[bin]]
name = "hk-us-quant-platform"
path = "src/main.rs"

[lib]
name = "hk_us_quant_platform"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration management
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Async channels
async-trait = "0.1"

# Random data generation (for mock data fallback)
rand = "0.8"

# HTTP client for broker APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Testing utilities
tokio-test = "0.4"
http-body-util = "0.1"

# Random data generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
